# hs-app-template

./: .gitignore  Dockerfile  LICENSE  README.md  circle.yml  geofeed-mute.cabal  hs-app-template.cabal  package.yaml  run.sh  stack.yaml  test.sh  untemplate.sh
.circleci/: config.yml
app/: DevApp.hs  Main.hs  Service.hs
docker/: set-environment.sh  start.sh  test.sh
scripts/: build-librdkafka.sh  container.sh  integration-tests.sh
src/: App.hs  AppState.hs  Application.hs  Options.hs
src/App/: AppEnv.hs  AppError.hs  AppOptions.hs  AppState.hs  Application.hs  Kafka.hs  Options.hs  Orphans.hs  Service.hs
src/App/AWS/: Env.hs  S3.hs
tests/App/: OptionsSpec.hs
