name:                geofeed-mute
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/packetloop/geofeed-mute#readme
license:             BSD3
license-file:        LICENSE
author:              Alexey Raga
maintainer:          tyler.durden@arbor.net
copyright:           Arbor Networks
category:            Services
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable geofeed-mute
  hs-source-dirs:       app
  main-is:              Main.hs
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , geofeed-mute
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , containers
                      , datadog
                      , directory
                      , etc
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , random
                      , resourcet
                      , text
                      , transformers
                      , transformers-base
  ghc-options:       -threaded -rtsopts -O2
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

library
  hs-source-dirs:       src
  exposed-modules:      Application
                      , AppState
                      , Options
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , containers
                      , datadog
                      , directory
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , random
                      , resourcet
                      , text
                      , transformers
                      , transformers-base
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

test-suite tests
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  main-is:              Spec.hs
  ghc-options:          -Wall -threaded
  build-depends:        base >= 4.7 && < 5
                      , geofeed-mute
                      , hspec
                      , hedgehog
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , containers
                      , datadog
                      , directory
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , random
                      , resourcet
                      , text
                      , transformers
                      , transformers-base
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=