name:                hs-app-template
version:             1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/packetloop/hs-app-template#readme
license:             MIT
license-file:        LICENSE
author:              Arbor Networks
maintainer:          mayhem@arbor.net
copyright:           Arbor Networks
category:            Services
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hs-app-template
  hs-source-dirs:       app
  main-is:              Main.hs
  other-modules:        Service
  default-language:     Haskell2010
  build-depends:        base >= 4.7 && < 5
                      , hs-app-template
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , containers
                      , datadog
                      , directory
                      , etc
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , random
                      , optparse-applicative
                      , resourcet
                      , text
                      , transformers
                      , transformers-base
  ghc-options:       -threaded -rtsopts -O2
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

library
  hs-source-dirs:       src
  exposed-modules:      App
                      , App.Application
                      , App.AppError
                      , App.AppOptions
                      , App.AppState
                      , App.AWS.S3
                      , App.Kafka
                      , App.Options
                      , App.Orphans
  default-language:     Haskell2010
  ghc-options:          -Wall
  build-depends:        base >= 4.7 && < 5
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , conduit-extra
                      , containers
                      , datadog
                      , directory
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , optparse-applicative
                      , random
                      , resourcet
                      , split
                      , text
                      , transformers
                      , transformers-base
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=

test-suite tests
  type:                 exitcode-stdio-1.0
  default-language:     Haskell2010
  hs-source-dirs:       tests
  other-modules:        App.OptionsSpec
  main-is:              Spec.hs
  ghc-options:          -Wall -threaded
  build-depends:        base >= 4.7 && < 5
                      , hs-app-template
                      , hspec
                      , hedgehog
                      , amazonka
                      , amazonka-core
                      , amazonka-s3
                      , avro
                      , bifunctors
                      , bytestring
                      , conduit
                      , containers
                      , datadog
                      , directory
                      , exceptions
                      , fast-logger
                      , hs-arbor-logger
                      , hw-conduit
                      , hw-kafka-avro
                      , hw-kafka-client
                      , hw-kafka-conduit
                      , lens
                      , monad-control
                      , monad-logger
                      , mtl
                      , network
                      , random
                      , resourcet
                      , text
                      , transformers
                      , transformers-base
  default-extensions: OverloadedStrings, TupleSections
  if os(darwin)
    cpp-options: -D__attribute__(A)= -D_Nullable= -D_Nonnull=